# ML-algorithms

./: main.py  model.pkl  pyproject.toml  requirements.txt  test.txt
EDA/: heart_proj2.ipynb  inusrance_proj1.html  inusrance_proj1.ipynb
EDA/public/csv-files/: insurance_final.csv
model-betterment/cross-validation/: play.ipynb
model-betterment/ensemble/: bagging.ipynb  boosting.ipynb  model.py  stacking.ipynb
model-betterment/model-tunning/: GridSearchCV.ipynb  RandomSearch.ipynb  play.ipynb
nlp/: pyproject.toml
nlp/nlpML/: one.ipynb
supervised/classification-algorithms/KNNs/: learn.ipynb
supervised/classification-algorithms/Naives/: learn.ipynb
supervised/classification-algorithms/SVM/: learn.ipynb
supervised/classification-algorithms/decision-trees/: learn.ipynb
supervised/classification-algorithms/logistic-regression/: cleaned_data.csv  learn.ipynb
supervised/classification-algorithms/project/: frontend.py  model.ipynb  modelFinal.pkl
supervised/linear-regression/: car-price-prediction.ipynb  insurance-model.pkl
supervised/linear-regression/carApp/: main.py
supervised/linear-regression/carApp/frontend/: README.md  app.py  code.txt
supervised/linear-regression/carApp/models/: model.py
supervised/linear-regression/carApp/schema/: input.py
supervised/linear-regression/carApp/utils/: responses.py
supervised/linear-regression/models/: car-price-prediction-model.pkl
supervised/linear-regression/notebooks/: car-price-prediction.ipynb  insurance-model.ipynb
unsupervised/: basics.ipynb
