[project]
name = "ml-algorithms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.3",
    "jupyterlab-widgets>=3.0.16",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas<3",
    "pydantic>=2.12.5",
    "requests>=2.31.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.32.0",
    "tqdm>=4.67.3",
    "tqdm-joblib>=0.0.5",
    "uvicorn>=0.42.0",
    "xgboost>=3.2.0",
]
